mhdFoam is compiled!

--- a/applications/solvers/electromagnetics/mhdFoam/mhdFoam.vcxproj.filters
+++ b/applications/solvers/electromagnetics/mhdFoam/mhdFoam.vcxproj.filters
@@ -18,6 +18,9 @@
     <None Include="readBPISOControls.lxx">
       <Filter>src</Filter>
     </None>
+    <None Include="createFields.lxx">
+      <Filter>src</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="mhdFoam.cxx">
